refactor: Configurando pacote e versionamento da api